--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 600px) {
-    mt-5{
+    calendario{
         flex-direction: column;
         margin: 5%;
         padding: 0;
