--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 600px) {
-    calendario{
+    row{
         flex-direction: column;
+        flex-wrap: wrap;
         margin: 5%;
         padding: 0;
         width: 100%;
